fix : seperate route calculation food plan and create food plan, fix validation slices payload
